# quantum-mechanics

./: .gitignore  Cargo.toml  Makefile
examples/: double_well.rs  harmonic_oscillator_matching_method.rs  harmonic_oscillator_shooting_method.rs  lennard_jones.rs  square_well_shooting_method.rs  square_well_shooting_method_even.rs  square_well_shooting_method_odd.rs  variational_lennard_jones.rs
gnuplot/: harmonic_oscillator_shooting_method.gpi  square_well_shooting_method.gpi  square_well_shooting_method_even.gpi  square_well_shooting_method_odd.gpi
src/: lib.rs  main.rs  physics.rs  prelude.rs  utils.rs
src/physics/: matching.rs  shooting.rs  solvers.rs  variational.rs
src/physics/solvers/: matching.rs  shooting.rs  variational.rs
src/utils/: finite_difference.rs  integration.rs  inward_vec.rs  root_finding.rs
