[package]
name = "quantum-mechanics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "square_well_shooting_method_even"
path = "examples/square_well_shooting_method_even.rs"

[[example]]
name = "square_well_shooting_method_odd"
path = "examples/square_well_shooting_method_odd.rs"

[[example]]
name = "harmonic_oscillator_shooting_method"
path = "examples/harmonic_oscillator_shooting_method.rs"

[dev-dependencies]
plotters = "0.3.3"
